# mocbot-bot

./: .dockerignore  .env.local  .flake8  .gitignore  Dockerfile  README.md  config.yaml  config.yaml.local  dagger.json  docker-compose.yaml  helmfile.yaml.gotmpl  logging.json  pyproject.toml  requirements.txt
.dagger/: go.mod  main.go
.github/workflows/: ci.yaml  deploy.yaml  helmfile-diff.yaml
docs/: maintenance.md
docs/adr/: mocbot-archive.md
infra/: values.yaml  values.yaml.gotmpl
lavalink/: application.template.yaml
lib/bot/: __init__.py
lib/cogs/: Cogs.py  Commands.py  Guilds.py  Levels.py  Lobbies.py  Music.py  UserModeration.py  Verification.py
lib/music/: AutoplayService.py  Decorators.py  EmbedFactory.py  Events.py  Exceptions.py  Filters.py  Lavalink.py  MusicLyrics.py  MusicQueue.py  MusicService.py  Types.py  views.py
lib/music/containers/: __init__.py  base.py  now_playing.py  queue_add.py  queue_display.py  recents_display.py
lib/socket/: Socket.py
lib/socket/namespaces/: Music.py  Verification.py
utils/: Lavalink.py  Music.py  Pagination.py
utils/APIHandler/: __init__.py
utils/ConfigHandler/: __init__.py
